<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_manual" />

    <Button
        android:id="@+id/down"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/up"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/up"
        android:layout_toRightOf="@+id/button_back_main"
        android:text="@string/down" />

    <Button
        android:id="@+id/button_back_main"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/button_exit" />

    <Button
        android:id="@+id/up"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="48dp"
        android:layout_toLeftOf="@+id/button_back_main"
        android:text="@string/up" />

    <Button
        android:id="@+id/left"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/up"
        android:layout_alignRight="@+id/up"
        android:layout_below="@+id/up"
        android:layout_marginTop="51dp"
        android:text="@string/left" />

    <Button
        android:id="@+id/right"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/left"
        android:layout_alignBottom="@+id/left"
        android:layout_alignLeft="@+id/down"
        android:layout_alignRight="@+id/down"
        android:text="@string/right" />

</RelativeLayout>