<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_autonomo" />

    <ImageView
        android:id="@+id/canvas_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/button_back_main"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/modo_autonomo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/divider_horizontal_bright" />

    <Button
        android:id="@+id/button_back_main"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/canvas_view"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="30dp"
        android:text="@string/button_exit" />

    <Button
        android:id="@+id/button_autonomous"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_back_main"
        android:layout_alignBottom="@+id/button_back_main"
        android:layout_alignLeft="@+id/canvas_view"
        android:text="@string/go_autonomous" />

</RelativeLayout>